# swift-corelibs-libdispatch

./: CMakeLists.txt
.github/: CODEOWNERS
cmake/: config.h.in
cmake/modules/: CMakeLists.txt  DispatchCompilerWarnings.cmake  DispatchSanitization.cmake  EnableFramePointers.cmake  PlatformInfo.cmake  SwiftSupport.cmake  dispatchConfig.cmake.in
dispatch/: CMakeLists.txt  base.h
private/: private.h
src/: CMakeLists.txt  block.cpp  init.c  internal.h  io.c  queue.c  semaphore.c  shims.h  transform.c
src/BlocksRuntime/: Block_private.h  BlocksRuntime.def  CMakeLists.txt  data.c
src/event/: event_config.h  event_epoll.c  event_kevent.c  event_windows.c  workqueue.c  workqueue_internal.h
src/firehose/: firehose_buffer.c
src/shims/: atomic.h  atomic_sfb.h  hw_config.h  lock.c  lock.h  priority.h  time.h  tsd.h  yield.h
src/swift/: Block.swift  CMakeLists.txt  Data.swift  Dispatch.swift  DispatchStubs.m  IO.swift  Queue.swift  Source.swift  Wrapper.swift
src/swift/shims/: DispatchOverlayShims.h
tests/: CMakeLists.txt  bsdtestharness.c  bsdtests.c  bsdtests.h  ctest-android.sh.in  dispatch_apply.c  dispatch_io_pipe.c  dispatch_select.c  dispatch_test.h  dispatch_thread_name.c  dispatch_transform.c  dispatch_workqueue.c
tests/Foundation/: bench.mm
